# UNA-PAS2

./: .gitignore  README.md
modulo-01-cpp-para-dsp/: 01-señal_basica.cpp  02-0-gain.cpp  02-1-gain-v2-inplace.cpp  02-1-gain-v3-transform.cpp  03-rms.cpp  Juce-gainrms-setup.md  aplicar-gain-1  calcular-rms  gain.csv  readme.md  senal  senal.csv  setup.md
modulo-01-cpp-para-dsp/04-plugin-gainrms/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modulo-02-dft-fft/: 01-sinusoide-real.cpp  02-b-sinusoide-compleja-complex.cpp  02-sinusoide-compleja.cpp  03-1-dft-basica.cpp  03-2-dft-real.cpp  03-3-dft-centrada.cpp  04-fft.cpp  05-suma-sinusoides.cpp  dft-basica  dft-real  fft  fft.csv  readme.md  sinusoide-compleja  sinusoide-compleja-b  sinusoide-compleja.csv  sinusoide-real  sinusoide.csv  suma-sinusoides  suma-sinusoides.csv
modulo-02-dft-fft/06-SpectrumAnalyzerPlugin/: CMakeLists.txt
modulo-02-dft-fft/06-SpectrumAnalyzerPlugin/Source/: PluginProcessor.cpp  PluginProcessor.h
modulo-talleres/: README.md
modulo-talleres/taller-01-balance/: CMakeLists.txt  CONSIGNA.md  CONSIGNA.md 
modulo-talleres/taller-02-colores/: PluginEditor.h
modulo-talleres/taller-03-ventanas/: PluginEditor.cpp
